// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBubble should render a maximum of 99 1`] = `
<PeachText
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "center",
        "color": "#FFF9F6",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 14,
        "letterSpacing": 0.14,
        "lineHeight": 20,
      },
      {
        "fontSize": 12,
        "lineHeight": 18,
      },
    ]
  }
>
  99
</PeachText>
`;

exports[`NotificationBubble should render a notificationbubble 1`] = `
<PeachText
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "center",
        "color": "#FFF9F6",
        "fontFamily": "Baloo2-Regular",
        "fontSize": 14,
        "letterSpacing": 0.14,
        "lineHeight": 20,
      },
      false,
    ]
  }
>
  1
</PeachText>
`;
